2003-11-22  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged all files of the repository with "foomatic-3_0-bp",
	  started stable branch "foomatic-3_0-branch".
	
2003-11-20  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.1rc1. 
	  Tag name: "foomatic-filters-3_0_1rc1".

	* README, USAGE: Updated for version 3.0.1rc1.

2003-11-19  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in, filter.conf: Added support for CUPS raster
	  drivers to foomatic-rip. Now CUPS raster drivers can be used
	  with every spooler.

2003-10-24  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed bug of sometimes an extra blank page
	  being printed after the job.

2003-10-21  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: Added option "--disable-file-converter-check" to
	  disable checking whether there is a file converter installed.

2003-10-20  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: Added /usr/local/libexec to LIBSEARCHPATH for *BSD
	  compatibilty. Thanks to Sebastian Horzela (sh at horzela dot
	  com).
	
	* configure.in: For CUPS a2ps, enscript, or mpage is not needed,
	  here texttops of CUPS is used be default. So let ./configure
	  also check for texttops.

	* tests/Makefile.in: Continue testing when comparing the result of
	  a test with the reference file fails, give only a warning in
	  such a case.

2003-10-20  Patrick Powell <papowell@lprng.com>

	* added 'use strict' and -w to the Perl options.

	* fixed a large number of undefined or out of scope variable
	  references discovered by the 'use strict' and -w.

	* added 'use Cwd' to get current working directory

	* Modified foomatic-rip to auto-sense the LPRng configuration.
	  This eliminates the need for the --lprng option, unless you want
	  to use it.  You now set the ppd_file option in the printcap to
	  specify the location of the PPD file:

	  	lp:filter=/path/to/foomatic-rip
	  	  :ppd_file=/path/to/ppdfile