@@ -12,10 +12,8 @@ AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
 
-SYSCONFSEARCHPATH=/etc:/usr/etc:/usr/local/etc:/var/etc
-BINSEARCHPATH=/usr/bin:/bin:/usr/local/bin
-DATASEARCHPATH=/usr/share:/usr/local/share:/usr/lib:/usr/local/lib:/opt
-LIBSEARCHPATH=/usr/lib:/lib:/usr/local/lib:/usr/local/libexec:/opt
+ETCSEARCHPATH=${prefix}/etc:/usr/etc:/usr/local/etc
+LIBSEARCHPATH=${prefix}/lib:/usr/lib:/usr/local/lib:${prefix}/libexec:/usr/libexec:/usr/local/libexec
 
 dnl Get the operating system and version number...
 uname=`uname`
@@ -25,32 +23,34 @@ if test x$uname = xIRIX64; then
 fi
 
 if test x$uname = xIRIX; then
-  SYSCONFSEARCHPATH="/usr/freeware/etc:$SYSCONFSEARCHPATH"
-  BINSEARCHPATH="/usr/freeware/bin:$BINSEARCHPATH"
-  DATASEARCHPATH="/usr/freeware/share:$DATASEARCHPATH"
+  ETCSEARCHPATH="/usr/freeware/etc:$ETCSEARCHPATH"
   LIBSEARCHPATH="/usr/freeware/lib32:/usr/freeware/lib:$LIBSEARCHPATH"
 fi
 
 dnl Check for Perl
-AC_PATH_PROGS(PERL,perl,/usr/bin/perl,$BINSEARCHPATH)
+AC_PATH_PROG(PERL,perl)
+
+if test -z "$PERL"; then
+	AC_MSG_ERROR([Perl 5 is required to build and run]);
+fi
 
 dnl Check for /etc/printcap
-AC_PATH_PROGS(PRINTCAP,printcap,/etc/printcap,$SYSCONFSEARCHPATH)
+AC_PATH_DIR(PRINTCAP,printcap,/etc/printcap,$ETCSEARCHPATH)
 
 dnl Check for /usr/lib/cups
-AC_PATH_PROGS(CUPS,cups,/usr/lib/cups,$LIBSEARCHPATH)
+AC_PATH_DIR(CUPS,cups,/usr/lib/cups,$LIBSEARCHPATH)
 
 dnl Check for /usr/lib/cups/filter
-AC_PATH_PROGS(CUPS_FILTERS,cups/filter,/usr/lib/cups/filter,$LIBSEARCHPATH)
+AC_PATH_DIR(CUPS_FILTERS,cups/filter,/usr/lib/cups/filter,$LIBSEARCHPATH)
 
 dnl Check for /usr/lib/ppr
-AC_PATH_PROGS(PPR,ppr,/usr/lib/ppr,$LIBSEARCHPATH)
+AC_PATH_DIR(PPR,ppr,/usr/lib/ppr,$LIBSEARCHPATH)
 
 dnl Check for /usr/lib/ppr/interfaces
-AC_PATH_PROGS(PPR_INTERFACES,ppr/interfaces,/usr/lib/ppr/interfaces,$LIBSEARCHPATH)
+AC_PATH_DIR(PPR_INTERFACES,ppr/interfaces,/usr/lib/ppr/interfaces,$LIBSEARCHPATH)
 
 dnl Check for /usr/lib/ppr/lib
-AC_PATH_PROGS(PPR_LIB,ppr/lib,/usr/lib/ppr/lib,$LIBSEARCHPATH)
+AC_PATH_DIR(PPR_LIB,ppr/lib,/usr/lib/ppr/lib,$LIBSEARCHPATH)
 
 AC_ARG_ENABLE(file-converter-check, [  --enable-file-converter-check  check whether a file converter is installed [default=yes]],
 [if eval "test x${enableval} = xno"; then
@@ -59,10 +59,11 @@ AC_ARG_ENABLE(file-converter-check, [  --enable-file-converter-check  check whet
 fi])
 
 dnl Check for a2ps, enscript, mpage
-AC_PATH_PROG(A2PS,a2ps,,$BINSEARCHPATH)
-AC_PATH_PROG(ENSCRIPT,enscript,,$BINSEARCHPATH)
-AC_PATH_PROG(MPAGE,mpage,,$BINSEARCHPATH)
+AC_PATH_PROG(A2PS,a2ps)
+AC_PATH_PROG(ENSCRIPT,enscript)
+AC_PATH_PROG(MPAGE,mpage)
 AC_PATH_PROG(TEXTTOPS,texttops,,$CUPS_FILTERS)
+
 if test "${NOCONVERTERCHECK}" = "" -a "${A2PS}" = "" -a "${ENSCRIPT}" = "" -a "${MPAGE}" = "" -a "${TEXTTOPS}" = "" ; then
 	AC_MSG_ERROR([cannot find a2ps, enscript, mpage, or CUPS' texttops.  You need to have at least one installed]);
 fi
